sumo/tests/duarouter/routes/style2_input/errors/vehicle_empty_departpos/errors.duarouter
Error: Attribute 'departPos' in definition of a vehicle is empty.
Error: Invalid departPos definition for vehicle '0'
Quitting (on error).
